--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,9 +20,26 @@
     <string name="extension_title">Stack Exchange</string>
     <string name="extension_description">Shows reputation and shit.</string>
     <string name="pref_site_title">Site</string>
-    <string name="pref_site_default">stackoverflow.com</string>
     <string name="pref_user_id_title">User ID</string>
-    <string name="pref_user_id_default"></string>
+    <string name="pref_display_title">Display</string>
+
+    <string-array name="pref_display_entries">
+        <item>Total Reputation</item>
+        <item>Day\'s Reputation</item>
+        <item>Reputation Change</item>
+    </string-array>
+
+    <string name="display_reputation">reputation</string>
+    <string name="display_day_reputation">day_reputation</string>
+    <string name="display_reputation_change">reputation_change</string>
+
+    <string-array name="pref_display_entry_values">
+        <item>@string/display_reputation</item>
+        <item>@string/display_day_reputation</item>
+        <item>@string/display_reputation_change</item>
+    </string-array>
+
     <string name="title_settings">Stack Extension Settings</string>
+    <string name="status_none" translatable="false">––</string>
 
 </resources>
